# INF1900---Projeto-Final

./: .gitignore  CMakeLists.txt  LICENSE  README.md
TrucoGame/: CMakeLists.txt
TrucoGame/include/: Aplicação.h  CMakeLists.txt
TrucoGame/include/Gerenciador/: Camera.h  GerenciadorGrafico.h
TrucoGame/include/controllers/: Application.h  GMController.h  TableController.h
TrucoGame/include/model/: Player.h  Table.h
TrucoGame/include/models/: Card.h  Deck.h  ErrorCode.h  GameManager.h  Packet.h  Player.h  Score.h  Table.h
TrucoGame/include/models/client/: ClientGameManager.h  TcpClient.h
TrucoGame/include/models/packets/: CardPacket.h  ElevenHandPacket.h  ElevenHandResponsePacket.h  EndRoundPacket.h  EndTurnPacket.h  Packet.h  PlayerPlayPacket.h  StartGamePacket.h  StartRoundPacket.h  TrucoPacket.h
TrucoGame/include/models/server/: AIPlayer.h  Client.h  GameManager.h  Player.h  ServerGameManager.h  TcpClientPlayer.h  TcpServer.h
TrucoGame/include/views/: Button.h  ButtonBase.h  Camera.h  GraphicManager.h  MainMenuState.h  MouseState.h  MutexView.h  State.h  UtilsView.h
TrucoGame/include/views/button/: ButtonBase.h
TrucoGame/include/views/text/: TextView.h
TrucoGame/include/views/trucoGameView/: Animator.h  CardButton.h  CardDeck.h  CardView.h  CardsEnum.h  PlayerName.h  PlayerView.h  ScoreView.h  TableView.h  TrucoGameView.h
TrucoGame/include/views/trucoGameView/buttonsTruco/: CardButton.h  IncreaseScoreButton.h  TrucoButton.h
TrucoGame/include/views/trucoGameView/player/: PlayerCards.h  PlayerView.h
TrucoGame/include/views/utils/: CardsEnum.h  MutexView.h  StakesValueEnum.h  StartInputWindow.h  StatesView.h  UtilsView.h
TrucoGame/src/: Aplicação.cpp  CMakeLists.txt  TrucoGame.cpp
TrucoGame/src/Gerenciador/: Camera.cpp  GerenciadorGrafico.cpp
TrucoGame/src/controllers/: Application.cpp  GMController.cpp
TrucoGame/src/model/: Table.cpp
TrucoGame/src/models/: Card.cpp  Deck.cpp  GameManager.cpp  Packet.cpp  Player.cpp  Score.cpp  Table.cpp
TrucoGame/src/models/client/: ClientGameManager.cpp  TcpClient.cpp
TrucoGame/src/models/packets/: Packet.cpp
TrucoGame/src/models/server/: AIPlayer.cpp  Client.cpp  GameManager.cpp  Player.cpp  ServerGameManager.cpp  TcpClientPlayer.cpp  TcpServer.cpp
TrucoGame/src/views/: Button.cpp  ButtonBase.cpp  Camera.cpp  GraphicManager.cpp  MainMenuState.cpp  MouseState.cpp  MutexView.cpp  State.cpp  UtilsView.cpp
TrucoGame/src/views/button/: ButtonBase.cpp
TrucoGame/src/views/mouse/: MouseState.cpp
TrucoGame/src/views/text/: TextView.cpp
TrucoGame/src/views/trucoGameView/: Animator.cpp  CardButton.cpp  CardDeck.cpp  CardView.cpp  PlayerName.cpp  PlayerView.cpp  ScoreView.cpp  TableView.cpp  TrucoGameView.cpp
TrucoGame/src/views/trucoGameView/Player/: PlayerCards.cpp  PlayerView.cpp
TrucoGame/src/views/trucoGameView/buttonsTruco/: CardButton.cpp  TrucoButton.cpp
TrucoGame/src/views/utils/: MutexView.cpp  StartInputWindow.cpp  StatesView.cpp  UtilsView.cpp
